added missing update and fingerprint string for german translation

--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -140,6 +140,8 @@
     <string name="language">Sprache</string>
     <string name="system_default">(Systemstandard)</string>
     <string name="settings_update">Aktualisierungs-Einstellungen</string>
+    <string name="settings_check_update_title">Prüfe nach Aktualisierungen</string>
+    <string name="settings_check_update_summary">Prüfe regelmäßig im Hintergrund nach Aktualisierungen</string>
     <string name="settings_update_channel_title">Aktualisierungs-Kanal</string>
     <string name="settings_update_stable">Stabil</string>
     <string name="settings_update_beta">Beta</string>
@@ -188,6 +190,7 @@
     <string name="requester_summary">Root-Sitzungen erben den Namensraum des Abfragenden</string>
     <string name="isolate_summary">Jede Root-Sitzung hat ihren isolierten Namensraum</string>
     <string name="android_o_not_support">Android 8.0+ wird nicht unterstützt</string>
+    <string name="disable_fingerprint">Keine Fingerabdrücke gespeichert oder keine Geräteunterstützung</string>
 
     <!--Superuser-->
     <string name="su_request_title">Superuser-Anfrage</string>
@@ -197,7 +200,7 @@
     <string name="grant">Gewähren</string>
     <string name="su_warning">Erlaubt den vollen Zugriff auf das Gerät.\nVerweigere, wenn du dir unsicher bist!</string>
     <string name="forever">Dauerhaft</string>
-    <string name="once">Nur diesmal</string>
+    <string name="once">Einmalig</string>
     <string name="tenmin">10 Min.</string>
     <string name="twentymin">20 Min.</string>
     <string name="thirtymin">30 Min.</string>
