--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -11,10 +11,10 @@
 
     <!--Status Fragment-->
     <string name="magisk_version_error">Magisk no está instalado</string>
-    <string name="checking_for_updates">Comprobando actualizaciones…</string>
+    <string name="checking_for_updates">Comprobando Actualizaciones…</string>
     <string name="magisk_update_available">¡Disponible Magisk v%1$s!</string>
     <string name="invalid_update_channel">Canal de actualización inválido</string>
-    <string name="safetyNet_check_text">Toque para comprobar el estado de SafetyNet</string>
+    <string name="safetyNet_check_text">Comprobar el estado de SafetyNet</string>
     <string name="checking_safetyNet_status">Comprobando estado de SafetyNet…</string>
     <string name="safetyNet_check_success">La comprobación fue exitosa</string>
     <string name="safetyNet_api_error">Error en la API de SafetyNet</string>
@@ -29,7 +29,7 @@
     <string name="current_magisk_title">Versión instalada: %1$s</string>
     <string name="install_magisk_title">Última versión: %1$s</string>
     <string name="uninstall">Desinstalar</string>
-    <string name="uninstall_magisk_msg">Todos los módulos serán desactivados / eliminados. El acceso Root se eliminará y, posiblemente, encriptará los datos si los datos no están cifrados actualmente.</string>
+    <string name="uninstall_magisk_msg">Todos los módulos serán desactivados / eliminados. El acceso Root se eliminará y, posiblemente, cifrará los datos si los datos no están cifrados actualmente.</string>
     <string name="uninstall_magisk_title">Desinstalar Magisk</string>
     <string name="update">Actualización %1$s</string>
     
@@ -47,7 +47,7 @@
     <string name="reboot_download">Reiniciar en Modo Download</string>
 
     <!--Repo Fragment-->
-    <string name="update_available">Actualización disponible</string>
+    <string name="update_available">Actualización Disponible</string>
     <string name="installed">Instalado</string>
     <string name="not_installed">No Instalado</string>
     <string name="updated_on">Actualizado el: %1$s</string>
