--- a/src/main/res/values-fr/strings.xml
+++ b/src/main/res/values-fr/strings.xml
@@ -27,7 +27,7 @@
     <string name="keep_force_encryption">Garder le chiffrement forcé</string>
     <string name="keep_dm_verity">Garder AVB 2.0/dm-verity</string>
     <string name="current_magisk_title">Version installée : %1$s</string>
-    <string name="install_magisk_title">Dernière Magisk : %1$s</string>
+    <string name="install_magisk_title">Dernière version : %1$s</string>
     <string name="uninstall">Désinstaller</string>
     <string name="uninstall_magisk_title">Désinstaller Magisk</string>
 	<string name="uninstall_magisk_msg">Tous les modules seront désactivés/effacés. Le root sera enlevé et vos données seront potentiellement chiffrées si elles ne le sont pas actuellement</string>
@@ -53,7 +53,7 @@
     <string name="updated_on">Mis à jour le: %1$s</string>
     <string name="sorting_order">Mode de tri</string>
     <string name="sort_by_name">Trier par nom</string>
-    <string name="sort_by_update">Trier par dernière mis à jour</string>
+    <string name="sort_by_update">Trier par dernière mise à jour</string>
 
     <!--Log Fragment-->
     <string name="menuSaveLog">Enregistrer journal</string>
@@ -74,7 +74,7 @@
     <string name="support_thread">Fil d\'assistance</string>
 
     <!--Toasts, Dialogs-->
-    <string name="permissionNotGranted">Cette fonctionnalité ne marchera pas sans la permission d\'écriture sur le stockage externe.</string>
+    <string name="permissionNotGranted">Cette fonctionnalité ne fonctionnera pas sans la permission d\'écriture sur le stockage externe.</string>
     <string name="no_thanks">Non merci</string>
     <string name="yes">Oui</string>
     <string name="ok">OK</string>
@@ -85,7 +85,7 @@
     <string name="download_file_error">Erreur de téléchargement du fichier</string>
     <string name="reboot">Redémarrer</string>
     <string name="downloading_toast">Téléchargement %1$s</string>
-    <string name="magisk_update_title">Nouvelle mis à jour Magisk disponible!</string>
+    <string name="magisk_update_title">Nouvelle mise à jour Magisk disponible!</string>
     <string name="settings_reboot_toast">Redémarrer afin d\'appliquer les réglages</string>
     <string name="release_notes">Notes de version</string>
     <string name="repo_cache_cleared">Cache du dépôt éffacé</string>
@@ -94,33 +94,33 @@
     <string name="internal_storage">Le zip est enregistré dans:\n[Stockage Interne]%1$s</string>
     <string name="zip_download_title">Téléchargement</string>
     <string name="zip_download_msg">Téléchargement du fichier zip (%1$d%%) …</string>
-    <string name="zip_process_title">Tritement en cours</string>
+    <string name="zip_process_title">Traitement en cours</string>
     <string name="zip_process_msg">Traitement du fichier zip…</string>
     <string name="manager_update_title">Nouvelle mise à jour du Gestionnaire Magisk disponible!</string>
     <string name="manager_download_install">Appuyer pour télécharger et installer</string>
     <string name="dtbo_patched_title">DTBO a été patché!</string>
-    <string name="dtbo_patched_reboot">Le Gestionnaire Magisk a vient de patcher dtbo.img, merci de redémarrer</string>
-    <string name="magisk_updates">Mises  à jours Magisk</string>
-    <string name="flashing">Flahage</string>
+    <string name="dtbo_patched_reboot">Le Gestionnaire Magisk vient de patcher dtbo.img, merci de redémarrer</string>
+    <string name="magisk_updates">Mises à jour Magisk</string>
+    <string name="flashing">Flashage</string>
     <string name="hide_manager_toast">Masquage du Gestionnaire Magisk...</string>
-    <string name="hide_manager_toast2">Cela pourrait prendre un certain temps ...</string>
+    <string name="hide_manager_toast2">Cela pourrait prendre un certain temps...</string>
     <string name="hide_manager_fail_toast">Masquage du Gestionnaire Magisk échoué…</string>
     <string name="download_zip_only">Uniquement télécharger le zip</string>
     <string name="patch_boot_file">Patch Fichier Image Démarrage</string>
-    <string name="direct_install">Installation directe (Recommendée)</string>
+    <string name="direct_install">Installation directe (Recommandé)</string>
     <string name="install_second_slot">Installer dans le second Slot (Après OTA)</string>
-    <string name="select_method">Sélectionner le méthode</string>
+    <string name="select_method">Sélectionner la méthode</string>
     <string name="no_boot_file_patch_support">La version cible de Magisk ne prend pas en charge la correction de fichier image de démarrage</string>
-    <string name="boot_file_patch_msg">Sélectionnez l\'image par défaut de démarrage stockée au format .img ou .img.tar</string>
+    <string name="boot_file_patch_msg">Sélectionnez l\'image de démarrage par défaut stockée au format .img ou .img.tar</string>
     <string name="complete_uninstall">Désinstallation terminée</string>
     <string name="restore_img">Restauration des images</string>
     <string name="uninstall_app">Désinstallation de l\'application</string>
     <string name="restore_done">Restauration terminée!</string>
     <string name="restore_fail">Le sauvegarde par défaut n\'existe pas!</string>
-    <string name="uninstall_toast">Désinstallation du Gestionnaire Magisk dans 5 secondes, merci de redémarrer manuellement après celà</string>
+    <string name="uninstall_toast">Désinstallation du Gestionnaire Magisk dans 5 secondes, merci de redémarrer manuellement par la suite</string>
     <string name="proprietary_title">Télécharger Code Propriétaire</string>
-    <string name="proprietary_notice">Magisk Manager est Libre, il ne contient pas le code API SafetyNet propriétaire de Google. \ N \ nAutorisez vous le Gestionnaire Magisk à télécharger une extension (contenant GoogleApiClient) pour les contrôles SafetyNet? </string>
-    <string name = "su_db_corrupt"> La base de données SU est corrompue, une nouvelle base de donnée va être re-créé</string>
+    <string name="proprietary_notice">Magisk Manager est Libre, il ne contient pas le code API SafetyNet propriétaire de Google. \ N \ nAutorisez vous le Gestionnaire Magisk à télécharger une extension (contenant GoogleApiClient) pour les contrôles SafetyNet?</string>
+    <string name = "su_db_corrupt"> La base de données SU est corrompue, une nouvelle base de donnée va être re-créée</string>
     
 <!--Settings Activity -->
     <string name="settings_general_category">Général</string>
@@ -136,10 +136,10 @@
     <string name="settings_restore_manager_summary">Restaurer le Gestionnaire Magisk avec le paquet originel</string>
     <string name="language">Language</string>
     <string name="system_default">(Système par Défaut)</string>
-    <string name="settings_update">Mis à jour des réglages</string>
-    <string name="settings_check_update_title">Vérification des mises à jours</string>
-    <string name="settings_check_update_summary">Vérifier l\'éxistance de mise à jour en tâche de fond de façon périodique</string>
-    <string name="settings_update_channel_title">Mis à jour du canal</string>
+    <string name="settings_update">Mise à jour des réglages</string>
+    <string name="settings_check_update_title">Vérification des mises à jour</string>
+    <string name="settings_check_update_summary">Vérifier l\'existence de mises à jour en tâche de fond de façon périodique</string>
+    <string name="settings_update_channel_title">Mise à jour du canal</string>
     <string name="settings_update_stable">Stable</string>
     <string name="settings_update_beta">Béta</string>
     <string name="settings_update_custom">Personalisé</string>
@@ -213,7 +213,7 @@
     <string name="su_snack_log_off">La journalisation pour %1$s est désactivée</string>
     <string name="su_snack_revoke">Les droits de %1$s sont annulés</string>
     <string name="su_revoke_title">Annuler ?</string>
-    <string name="su_revoke_msg">Vous confirmez l\'annulation des droits pour %1$s ?</string>
+    <string name="su_revoke_msg">Confirmez-vous l\'annulation des droits pour %1$s ?</string>
     <string name="toast">Toast</string>
     <string name="none">Aucun</string>
 	<string name="auth_fail">Authentication Échouée</string>
